[package]
name = "teste_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "complex_calc"
path = "src/complex_calc.rs"

[[bin]]
name = "matrix_mul"
path = "src/matrix_mul.rs"

[[bin]]
name = "sieve"
path = "src/sieve.rs"

[[bin]]
name = "thread_spawn"
path = "src/thread_spawn.rs"

[[bin]]
name = "bolinha"
path = "src/bolinha.rs"


[dependencies]
rayon = "1.7"
crossterm = "0.29.0"

[profile.release]
opt-level = "z"        # Otimiza para menor tamanho possível
strip = true           # Remove símbolos de depuração
lto = "fat"            # Link Time Optimization (reduz binário)
panic = "abort"        # Reduz código relacionado ao tratamento de panics
codegen-units = 1      # Reduz unidades de código geradas